# shellfish

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md  build.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/shellfish_clap/: .Cargo.lock.swp  Cargo.toml  build.sh  check.sh
examples/shellfish_clap/.cargo/: config.toml
examples/shellfish_clap/src/: main.rs
src/: app.rs  clap_command.rs  command.rs  lib.rs  shell.rs
src/handler/: app.rs  async_app.rs  asynchronous.rs  default.rs  mod.rs
src/input_handler/: mod.rs
